--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,22 @@
 version: "3"
 services:
   backend:
-    container_name: casino-backend
     build:
       context: ./backend
     ports:
       - "8080:8080"
     volumes:
-      - ./src:/app/src
-    tty: true 
+      - ./backend/src:/app/src
     networks:
       - casino-net
 
   frontend:
-    container_name: casino-frontend
     build:
       context: ./frontend
     ports:
       - "3000:3000"
     volumes:
-      - ./src:/app/src
-    tty: true 
+      - ./frontend/src:/app/src
     networks:
       - casino-net
 
