--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.3.4"
+    "sass": "^1.69.5",
+    "vite-plugin-fonts": "^0.7.0",
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.5",
+    "vuetify": "^3.4.0"
   },
   "devDependencies": {
+    "@mdi/js": "^7.3.67",
+    "@types/node": "^20.9.0",
     "@vitejs/plugin-vue": "^4.2.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
